--- a/about_me.html
+++ b/about_me.html
@@ -80,7 +80,7 @@ col-12">
 <div class="container-card1" id="card1">
   <h2>My Hunter</h2>
   <div class="card" style="width:200px">
-    <img class="card-img-top" src="images/hunter.png" alt="Card image" style="width:100%">
+         <img class="card-img-top" src="images/Hunter.png" alt="Card image" style="width: 100%">
     <div class="card-body">
       <h4 class="card-title">The character I play the most, since 2014!</h4>
       <p class="card-text"></p>
