--- a/silhouette_guess.html
+++ b/silhouette_guess.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Guess the Silhouette</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles/styles.css" rel="stylesheet">
     <link rel="Page Icon" link="images/logo.jpg">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
