--- a/about_me.html
+++ b/about_me.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Trivia of the Light and Dark</title>
-  <link href="styles.css" rel="stylesheet">
+    <title>About Me</title>
+  <link href="styles/styles.css" rel="stylesheet">
 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
