--- a/question_of_the_day.html
+++ b/question_of_the_day.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Trivia of The Light and Dark</title>
+  <title>Question of the Day</title>
   <!-- CSS only -->
-  <link href="styles.css" rel="stylesheet">
+  <link href="styles/styles.css" rel="stylesheet">
 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
